Code is now working. Changes: Moved up camera to be global, using HB includes, added SPACE_BAR to move up. Using Do_Movement() to move around

--- a/3Dproject/3Dproject.vcxproj
+++ b/3Dproject/3Dproject.vcxproj
@@ -191,6 +191,11 @@
     <None Include="shaders\deferred_geoPass_vs.glsl" />
     <None Include="shaders\deferred_lightPass_frag.glsl" />
     <None Include="shaders\deferred_lightPass_vs.glsl" />
+    <None Include="includes\deferred_gBufferTester_frag.glsl" />
+    <None Include="shaders\HB\deferred_geoPass_frag.glsl" />
+    <None Include="shaders\HB\deferred_geoPass_vs.glsl" />
+    <None Include="shaders\HB\deferred_lightPass_frag.glsl" />
+    <None Include="shaders\HB\deferred_lightPass_vs.glsl" />
     <None Include="shaders\JM\FragmentShader.glsl" />
     <None Include="shaders\JM\GeometryShader.glsl" />
     <None Include="shaders\JM\VertexShader.glsl" />
